# bt-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.py  test_config.py  test_mcp.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
mcp_server/: beach_tennis_mcp.py  config.env.example  requirements.txt
tests/: __init__.py  test_mcp_server.py
